@startuml TodoList
    entity Role{
        * _id: string
        --
        * roleName: string
    }

   entity User {
      * _id: integer <<PK>>
      --
      * userName : string
      * email: string
      * password : string
      --
      * userRole : ObjectId
   }

   entity Project {
      * _id: string <<PK>>
      --
      * projectId: string
      * projectName : string
      * status: enum("Done", "In Progress", "Cancel")
      --
      * createdBy: ObjectId
   }

   entity Task {
      * _id : integer <<PK>>
      --
      * taskId: string
      * taskName: string
      * description: string
      * status: enum("Done", "In Progress", "Cancel")
      * isDone: boolean
      --
      * linkTaskId: ObjectId
      * belongTo : ObjectId
      * assignTo : ObjectId
      * userRole: ObjectId
   }

   User ||--|| Role

   User ||--|{ Project
   
   Project ||--|{ Task
   User ||--|| Task
   Role ||--|| Task
   Task |o--o| Task

@enduml